# aoc2024

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
blog/: day01.md  day02.md  day03.md  day04.md  day05.md
datasets/tests/: day02.txt
payloads/: day01.duck  day01_1.sql  day01_2.sql  day02.duck  day02_1.sql  day02_1B.sql  day02_2.sql  day03.duck  day03_1.sql  day03_2.sql  day04.duck  day04_1.sql  day04_2.sql  day05.duck  day05_1.sql  day05_2.py
