[project]
name = "aoc2024"
version = "0.1.0"
description = "Advent Of Code 2024"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["sqlfluff>=3.2.5"]

[tool.sqlfluff.core]
dialect = "duckdb"
exclude_rules = ["structure.using"]
max_line_length = 120

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.references.keywords]
ignore_words = "level"
